doc/changes/package_diffs/11.1.0/standard-EXASOL-all-python-3.12/internal_packages.md
# Internal packages comparison between flavor "Standard Exasol All Python 3.12" in 11.1.0 and flavor "Standard Exasol All Python 3.12" in 11.0.0

<!-- markdown-link-check-disable -->

## Apt packages

|    | Package           | Version in 11.0.0         | Version in 11.1.0         | Status   | Build-Step     |
|---:|:------------------|:--------------------------|:--------------------------|:---------|:---------------|
|  0 | binutils          | 2.42-4ubuntu2.8           | 2.42-4ubuntu2.8           |          | base_test_deps |
|  1 | build-essential   | 12.10ubuntu1              | 12.10ubuntu1              |          | build_deps     |
|  2 | chrpath           | 0.16-2build1              | 0.16-2build1              |          | build_deps     |
|  3 | coreutils         | 9.4-3ubuntu6.1            | 9.4-3ubuntu6.1            |          | build_deps     |
|  4 | curl              | 8.5.0-2ubuntu10.8         | 8.5.0-2ubuntu10.8         |          | build_deps     |
|  5 | gdb               | 15.0.50.20240403-0ubuntu1 | 15.0.50.20240403-0ubuntu1 |          | base_test_deps |
|  6 | gdbserver         | 15.0.50.20240403-0ubuntu1 | 15.0.50.20240403-0ubuntu1 |          | base_test_deps |
|  7 | gnupg             | No version specified      | No version specified      |          | security_scan  |
|  8 | libpcre3-dev      | 2:8.39-15build1           | 2:8.39-15build1           |          | build_deps     |
|  9 | locales           | 2.39-0ubuntu8.7           | 2.39-0ubuntu8.7           |          | build_deps     |
| 10 | openjdk-17-jdk    | 17.0.18+8-1~24.04.1       | 17.0.18+8-1~24.04.1       |          | build_deps     |
| 11 | patchelf          | 0.18.0-1.1build1          | 0.18.0-1.1build1          |          | base_test_deps |
| 12 | protobuf-compiler | 3.21.12-8.2ubuntu0.3      | 3.21.12-8.2ubuntu0.3      |          | build_deps     |
| 13 | strace            | 6.8-0ubuntu2              | 6.8-0ubuntu2              |          | base_test_deps |
| 14 | tar               | 1.35+dfsg-3build1         | 1.35+dfsg-3build1         |          | build_deps     |
| 15 | trivy             | No version specified      | No version specified      |          | security_scan  |
| 16 | valgrind          | 1:3.22.0-0ubuntu3         | 1:3.22.0-0ubuntu3         |          | base_test_deps |